--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,6 @@
     <title>This is the title of the webpage!</title>
 </head>
 <body>
-<p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+<h1 style="font-family: Calibre,sans-serif">Nice one</h1>
 </body>
 </html>
